# onnx2keras

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml  end2end.yml  new_ci.yml  sync-upstream.yml  test_check_run.yml
leap_parser_tests/: conftest.py  test_branch_model.py
onnx2keras/: layers.py
onnx2kerastl/: activation_layers.py  constant_layers.py  convert_model.py  converter.py  convolution_layers.py  elementwise_layers.py  fft_layers.py  layers.py  linear_layers.py  logger_helpers.py  ltsm_layers.py  normalization_layers.py  operation_layers.py  padding_layers.py  pooling_layers.py  reshape_layers.py  sampling_layers.py  tfops_funcs.py  upsampling_layers.py  utils.py
onnx2kerastl/customonnxlayer/: __init__.py  onnxRNN.py  onnxabs.py  onnxcol2im.py  onnxconstantmul.py  onnxeinsum.py  onnxerf.py  onnxgru.py  onnxhardsigmoid.py  onnxless.py  onnxlstm.py  onnxpow.py  onnxreducemean.py  onnxsqrt.py
test/: detectron2_utils.py  requirements.txt  test_mmdet_convnext.py  utils.py
test/ctformer/: onnxcol2im.py
test/layers/: onnx_op_test_utils.py
test/layers/activations/: test_elu.py  test_elu_opset.py  test_hard_sigmoid.py  test_hard_sigmoid_opset.py  test_hard_swish_opset.py  test_hard_tanh.py  test_leaky_relu.py  test_leaky_relu_opset.py  test_log_sigmoid.py  test_mish_opset.py  test_prelu.py  test_prelu_opset.py  test_relu.py  test_relu6.py  (+11 more)
test/models/: amazon_fix.py  amazon_v1.py  efficiency_detectron2_test.py  test_albert_huggingface.py  test_albert_qa_huggingface.py  test_bert_huggingface_classification.py  test_ctformer.py  test_dinov2.py  test_dist.py  test_glpn.py  test_googlenet.py  test_interfuser.py  test_llama32_3b_instruct_sentiment_analysis.py  test_llama_sentiment_analysis.py  test_mbnet2.py  test_mnasnet.py  test_openclip.py  test_raft_ci.py  test_retinaNet_decetron2.py  test_retinaNet_detectron2.py  test_shufflenet.py  test_squeezenet.py  test_trackon_v1.py  test_tsm.py  test_vit.py
(+165 files in other folders)
