[tool.poetry]
name = "onnx2kerastl"
version = "0.0.122.dev9"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <=3.11.5"
tensorflow = {version = "2.14.0", markers = "platform_machine  == 'x86_64'"}
tensorflow-macos = {version = "2.14.0", markers = "platform_machine  == 'arm64'"}
onnx = "1.14.1"
keras-data-format-converter = "0.1.17.dev6"
tensorflow-addons = {version = "^0.23.0", markers = "platform_machine  == 'x86_64'"}
numpy = "1.23.5"
fvcore = "^0.1.5.post20221221"
pytest = "7.4.3"

[tool.poetry.dev-dependencies]
torch = {version = "2.1.1", markers = "platform_machine  == 'x86_64'"}
torchvision = {version = "^0.16.1", markers = "platform_machine  == 'x86_64'"}
transformers = {extras = ["onnx"], version = "^4.25.1", markers = "platform_machine  == 'x86_64'"}
sentencepiece ={version = "^0.1.96", markers = "platform_machine  == 'x86_64'"}
pandas = "^2.0.3"
datasets = "^2.14.1"
librosa = "^0.10.0.post2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
