[tool.poetry]
name = "onnx2kerastl"
version = "0.0.189"
description = ""
authors = ["dorhar <doron.harnoy@tensorleap.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
tensorflow = "^2.21.0"
onnx = "^1.21.0"
protobuf = "^6.31.0"
numpy = "^2.3.2"
fvcore = "^0.1.5.post20221221"
boto3 = "^1.24.22"
keras-data-format-converter = "^0.1.17"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
torch = {version = ">=2.0.0"}
torchvision = {version = "^0.15.0"}
transformers = {extras = ["onnx"], version = "^4.25.1"}
pandas = "^2.0.3"
datasets = "^2.14.1"
librosa = "^0.10.0.post2"
onnxruntime = {version = ">=1.17.0"}
sentencepiece ={version = "^0.1.96"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
